Fixing vertical alignment in index loop

--- a/_assets/scss/layouts/_index.scss
+++ b/_assets/scss/layouts/_index.scss
@@ -61,13 +61,25 @@ a.read-more {
 
 h1.latest {
 	color: $black;
-	float: none;
-	font-size: $fs1;
+	font-size: 2.470588235em;
 	font-weight: 700;
-	line-height: 1em;
-	margin: 5.52380952em 0 .345238095em;
-	text-shadow: none;
+	line-height: 1.23809524;
+	margin: 1.23809524em 0;
 	text-align: center;
+	@media (min-width: 600px) {
+		margin: 2.47619048em 0 1.23809524em;
+	}
+}
+
+.loop {
+	margin-bottom: $mb*2;
+	@media (min-width: 600px) {
+		margin-bottom: $mb*5;
+	}
+}
+
+.loop:last-of-type {
+	margin-bottom: 0;
 }
 
 .previous, .next {
