--- a/_assets/scss/layouts/_layout.scss
+++ b/_assets/scss/layouts/_layout.scss
@@ -18,7 +18,3 @@
 article {
 	margin-bottom: 3.76em;
 }
-
-.loop {
-	margin-top: $mb*5;
-}
